# 24-NUEDC-E

./: README.md
上位机/SWAN/: CMakeLists.txt  SWAN.code-workspace
上位机/SWAN/config/: control_config.json
上位机/SWAN/include/: README.md
上位机/SWAN/include/swan/: camera.h  control.h  image.h  model.h  uart.h
上位机/SWAN/lib/: README.md
上位机/SWAN/lib/onnx_linux_x64/: README.md
上位机/SWAN/lib/swan/: camera.cpp  control.cpp  image.cpp  model.cpp  uart.cpp
上位机/SWAN/src/include/: auto_pk.h  common.h  img_process.h  point_process.h  uart.h
上位机/SWAN/src/lib/: auto_pk.cpp  img_process.cpp  point_process.cpp  uart.cpp
上位机/SWAN/src/src/: demo.cpp
上位机/SWAN/tool/: compile.sh  env_config.sh
上位机/SWAN/tool/HSV_tool/: CMakeLists.txt
上位机/SWAN/tool/HSV_tool/src/: swan_HSV_tool.cpp
上位机/SWAN/tool/LDC_tool/: CMakeLists.txt
上位机/SWAN/tool/LDC_tool/src/: swan_LDC_tool.cpp
下位机/Code_8_1_B/: .cproject  .project
下位机/Code_8_1_B/Debug/: Code_8_1_B.hex  Code_8_1_B.map  Code_8_1_B.mdf  TASKING_C_C___Compiler-Include_paths.opt  makefile  sources.mk
下位机/Code_8_1_B/Debug/code/: ALL_Variables.d  Data.d  Motor.d  My_Device.d  Page.d  UART_Analysis.d  subdir.mk
下位机/Code_8_1_B/Debug/user/: cpu0_main.d  cpu1_main.d  isr.d  subdir.mk
下位机/Code_8_1_B/code/: ALL_Variables.c  ALL_Variables.h  Data.c  Data.h  Motor.c  Motor.h  My_Device.c  My_Device.h  Page.c  Page.h  UART_Analysis.c  UART_Analysis.h  common.h
下位机/Code_8_1_B/libraries/doc/: version.txt
下位机/Code_8_1_B/libraries/zf_common/: zf_common_clock.c  zf_common_clock.h  zf_common_debug.c  zf_common_debug.h  zf_common_fifo.c  zf_common_fifo.h  zf_common_font.c  zf_common_font.h  zf_common_function.c  zf_common_function.h  zf_common_headfile.h  zf_common_interrupt.c  zf_common_interrupt.h  zf_common_typedef.h
下位机/Code_8_1_B/libraries/zf_device/: zf_device_absolute_encoder.c  zf_device_absolute_encoder.h  zf_device_bluetooth_ch9141.c  zf_device_bluetooth_ch9141.h  zf_device_camera.c  zf_device_camera.h  zf_device_config.h  zf_device_detector.c  zf_device_detector.h  zf_device_dl1a.c  zf_device_dl1a.h  zf_device_dl1b.c  zf_device_dl1b.h  zf_device_gps_tau1201.c  zf_device_gps_tau1201.h  zf_device_icm20602.c  zf_device_icm20602.h  zf_device_imu660ra.c  zf_device_imu660ra.h  zf_device_imu963ra.c  zf_device_imu963ra.h  zf_device_ips114.c  zf_device_ips114.h  zf_device_ips200.c  (+27 more)
下位机/Code_8_1_B/user/: cpu0_main.c  cpu1_main.c  isr.c  isr.h  isr_config.h
(+320 files in other folders)
